--- a/pertama.html
+++ b/pertama.html
@@ -2,8 +2,23 @@
     <head>
         <title>
             Bantu Adaptasi Mahasiswa Baru, ITS Gelar Mentoring Agama Islam</title>
+
+        <link rel="stylesheet" href="mycss1.css">
+        <style>
+            
+        </style>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
+        <p>
+            <!-- hyperlink -->
+            <a href="https://www.its.ac.id">Web ITS</a> | 
+            <a href="https://google.co.id" target="_blank">Google</a> | 
+            <a href="https://kompas.tv" target="_self">Kompas TV</a> | 
+            <a href="">Di halaman ini</a>
+        </p>
 <h2><font style="color: #071275;">Bantu Adaptasi Mahasiswa Baru, ITS Gelar Mentoring Agama Islam</font></h2>
 <h6>Oleh : itsash <i>|</i> 18 <i>|</i> Source : ITS Online</h6>
 <p>
